# csgo-external

./: .gitignore  CMakeLists.txt  README.md  themida_config.tmd
.github/workflows/: cmake.yml
project/: entry.cpp  entry.hpp
project/cheat/: cheat.cpp  cheat.hpp
project/cheat/features/aimbot/: aimbot.cpp  aimbot.hpp
project/cheat/features/grenades/: grenades.cpp  grenades.hpp
project/cheat/features/menu/: menu.cpp
project/cheat/features/movement/: movement.cpp
project/cheat/features/overlay/: overlay.cpp  overlay.hpp
project/cheat/features/visuals/: visuals.cpp
project/cheat/helpers/configs/: config.cpp  config.hpp
project/cheat/helpers/console/: console.cpp  console.hpp
project/cheat/helpers/driver/: driver.cpp  driver.hpp  driver_binary.hpp
project/cheat/helpers/math/: math.cpp
project/cheat/sdk/definitions/: game.cpp  player.cpp  weapon.cpp
project/cheat/sdk/enums/: bones.hpp
project/cheat/sdk/structs/: offsets.hpp  player.hpp  player_info.hpp  vector.hpp  weapon.hpp
project/dependencies/bsp/: bsp_parser.cpp
project/dependencies/bsp/valve-bsp-parser/: bsp_parser.hpp
project/dependencies/bsp/valve-bsp-parser/core/: matrix.hpp
project/dependencies/hash/: hash.hpp
project/dependencies/liblzma/: liblzma.lib
project/dependencies/themida/include/: ThemidaSDK.h
project/dependencies/xor/: xor.hpp
